--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "howler": "^2.2.3",
+    "mdsvex": "^0.10.5",
     "sass": "^1.49.8",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
