--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 .DS_Store
 node_modules
-/.svelte-kit
 /build
-/functions
-/.netlify
-/TODO.md
-/.vscode
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+.vscode
