--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-static": "^1.0.2",
 		"@sveltejs/kit": "^1.0.12",
 		"@types/howler": "^2.2.7",
+		"autoprefixer": "^10.4.13",
 		"howler": "^2.2.3",
 		"mdsvex": "^0.10.6",
 		"prettier": "^2.8.2",
