--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
 		"typescript": "^5.1.6",
 		"vite": "^4.4.9"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@portabletext/to-html": "^2.0.0",
+		"@sanity/client": "^6.4.6",
+		"@sveltejs/adapter-netlify": "^2.0.8"
+	}
 }
